--- a/lib/lib.csproj
+++ b/lib/lib.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="ChainNodeData.cs" />
     <Compile Include="Crypto.cs" />
+    <Compile Include="Log.cs" />
     <Compile Include="Messaging.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RSAKeyPair.cs" />
