--- a/originator/originator.csproj
+++ b/originator/originator.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{4A5506B2-4E60-496E-96B8-C1009B44BE07}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>originator</RootNamespace>
+    <RootNamespace>OnionRouting</RootNamespace>
     <AssemblyName>originator</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
