separate chain node management from DirectoryService

--- a/directory/directory.csproj
+++ b/directory/directory.csproj
@@ -48,6 +48,7 @@
     <Compile Include="AWSHelper.cs" />
     <Compile Include="DirectoryService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ChainNodeManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
