--- a/chain/chain.csproj
+++ b/chain/chain.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="ChainService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ChainRequestHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
