Added exception handling for graceful exit and usage of a Settings file instead of constants.

--- a/directory/App.config
+++ b/directory/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="OnionRouting.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
     </startup>
@@ -7,4 +12,44 @@
         <add key="AWSProfileName" value="Administrator"/>
         <add key="AWSRegion" value="eu-central-1" />
     </appSettings>
+<applicationSettings>
+        <OnionRouting.Properties.Settings>
+                <setting name="defaultPort" serializeAs="String">
+                        <value>8000</value>
+                </setting>
+                <setting name="url" serializeAs="String">
+                        <value>chain</value>
+                </setting>
+                <setting name="chainLength" serializeAs="String">
+                        <value>3</value>
+                </setting>
+                <setting name="targetChainNodeCount" serializeAs="String">
+                        <value>6</value>
+                </setting>
+                <setting name="aliveCheckInterval" serializeAs="String">
+                        <value>5000</value>
+                </setting>
+                <setting name="aliveCheckTimeout" serializeAs="String">
+                        <value>4000</value>
+                </setting>
+                <setting name="credentialLocation" serializeAs="String">
+                        <value>C:\\credentials\\credentials</value>
+                </setting>
+                <setting name="chainNodeImageId" serializeAs="String">
+                        <value>ami-3005342d</value>
+                </setting>
+                <setting name="chainNodeTag" serializeAs="String">
+                        <value>G5-T3-ChainNode</value>
+                </setting>
+                <setting name="instanceType" serializeAs="String">
+                        <value>t2.micro</value>
+                </setting>
+                <setting name="keyPairName" serializeAs="String">
+                        <value>G5-T3-Keypair</value>
+                </setting>
+                <setting name="securityGroup" serializeAs="String">
+                        <value>sg-68ff1601</value>
+                </setting>
+        </OnionRouting.Properties.Settings>
+    </applicationSettings>
 </configuration>
