Reactivated credentials location via settings

--- a/directory/App.config
+++ b/directory/App.config
@@ -33,7 +33,7 @@
                         <value>4000</value>
                 </setting>
                 <setting name="credentialLocation" serializeAs="String">
-                        <value>C:\\credentials\\credentials</value>
+                        <value>C:\credentials</value>
                 </setting>
                 <setting name="chainNodeImageId" serializeAs="String">
                         <value>ami-3005342d</value>
