--- a/directory/Properties/Settings.settings
+++ b/directory/Properties/Settings.settings
@@ -21,7 +21,7 @@
       <Value Profile="(Default)">4000</Value>
     </Setting>
     <Setting Name="credentialLocation" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">C:\\credentials\\credentials</Value>
+      <Value Profile="(Default)">C:\credentials</Value>
     </Setting>
     <Setting Name="chainNodeImageId" Type="System.String" Scope="Application">
       <Value Profile="(Default)">ami-3005342d</Value>
