Credentials file now can hopefully be found

--- a/directory/App.config
+++ b/directory/App.config
@@ -50,6 +50,9 @@
                 <setting name="securityGroup" serializeAs="String">
                         <value>sg-68ff1601</value>
                 </setting>
+                <setting name="credentialsProfile" serializeAs="String">
+                        <value>default</value>
+                </setting>
         </OnionRouting.Properties.Settings>
     </applicationSettings>
 </configuration>
