Fixed a really evil concurrency bug.

--- a/directory/App.config
+++ b/directory/App.config
@@ -53,6 +53,9 @@
                 <setting name="credentialsProfile" serializeAs="String">
                         <value>default</value>
                 </setting>
+                <setting name="autoStartChainNodes" serializeAs="String">
+                        <value>False</value>
+                </setting>
         </OnionRouting.Properties.Settings>
     </applicationSettings>
 </configuration>
