--- a/directory/Properties/Settings.settings
+++ b/directory/Properties/Settings.settings
@@ -41,5 +41,8 @@
     <Setting Name="credentialsProfile" Type="System.String" Scope="Application">
       <Value Profile="(Default)">default</Value>
     </Setting>
+    <Setting Name="autoStartChainNodes" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
