Settings file for chain nodes

--- a/chain/App.config
+++ b/chain/App.config
@@ -1,6 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="OnionRouting.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
     </startup>
+<applicationSettings>
+        <OnionRouting.Properties.Settings>
+                <setting name="defaultPort" serializeAs="String">
+                        <value>8000</value>
+                </setting>
+                <setting name="statusUrl" serializeAs="String">
+                        <value>status</value>
+                </setting>
+                <setting name="keyUrl" serializeAs="String">
+                        <value>key</value>
+                </setting>
+                <setting name="routeUrl" serializeAs="String">
+                        <value>route</value>
+                </setting>
+        </OnionRouting.Properties.Settings>
+    </applicationSettings>
 </configuration>
