Changed standard settings for directory node to work with faster Linux images, and one little perfo performance tweak concerning the lock object.

--- a/directory/App.config
+++ b/directory/App.config
@@ -36,10 +36,10 @@
                         <value>C:\credentials</value>
                 </setting>
                 <setting name="chainNodeImageId" serializeAs="String">
-                        <value>ami-3005342d</value>
+                        <value>ami-9226158f</value>
                 </setting>
                 <setting name="chainNodeTag" serializeAs="String">
-                        <value>G5-T3-ChainNode</value>
+                        <value>G5-T3-MonoChainNode</value>
                 </setting>
                 <setting name="instanceType" serializeAs="String">
                         <value>t2.micro</value>
@@ -54,7 +54,7 @@
                         <value>default</value>
                 </setting>
                 <setting name="autoStartChainNodes" serializeAs="String">
-                        <value>False</value>
+                        <value>True</value>
                 </setting>
         </OnionRouting.Properties.Settings>
     </applicationSettings>
