Changes directory node setting to not instantiate ChainNodes, just in case.

--- a/directory/App.config
+++ b/directory/App.config
@@ -54,7 +54,7 @@
                         <value>default</value>
                 </setting>
                 <setting name="autoStartChainNodes" serializeAs="String">
-                        <value>True</value>
+                        <value>False</value>
                 </setting>
         </OnionRouting.Properties.Settings>
     </applicationSettings>
