--- a/directory/Properties/Settings.settings
+++ b/directory/Properties/Settings.settings
@@ -42,7 +42,7 @@
       <Value Profile="(Default)">default</Value>
     </Setting>
     <Setting Name="autoStartChainNodes" Type="System.Boolean" Scope="Application">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
