Added usage of Settings file to originator.

--- a/originator/App.config
+++ b/originator/App.config
@@ -1,6 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="OnionRouting.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
     </startup>
+<applicationSettings>
+        <OnionRouting.Properties.Settings>
+                <setting name="defaultPort" serializeAs="String">
+                        <value>8000</value>
+                </setting>
+                <setting name="directoryServiceUrl" serializeAs="String">
+                        <value>http://54.93.89.11:8000/chain</value>
+                </setting>
+                <setting name="quoteServiceUrl" serializeAs="String">
+                        <value>http://54.93.192.53:8000/quote</value>
+                </setting>
+                <setting name="handleUrl" serializeAs="String">
+                        <value>handle</value>
+                </setting>
+                <setting name="uiUrl" serializeAs="String">
+                        <value>ui</value>
+                </setting>
+        </OnionRouting.Properties.Settings>
+    </applicationSettings>
 </configuration>
