Implemented a different kind of load balancing, let's see if it works.

--- a/directory/App.config
+++ b/directory/App.config
@@ -56,6 +56,9 @@
                 <setting name="autoStartChainNodes" serializeAs="String">
                         <value>True</value>
                 </setting>
+                <setting name="balancingStrategy" serializeAs="String">
+                        <value>balanced</value>
+                </setting>
         </OnionRouting.Properties.Settings>
     </applicationSettings>
 </configuration>
