--- a/originator/App.config
+++ b/originator/App.config
@@ -25,6 +25,9 @@
                 <setting name="uiUrl" serializeAs="String">
                         <value>ui</value>
                 </setting>
+                <setting name="retryInterval" serializeAs="String">
+                        <value>3000</value>
+                </setting>
         </OnionRouting.Properties.Settings>
     </applicationSettings>
 </configuration>
